--- a/website/index.html
+++ b/website/index.html
@@ -221,7 +221,7 @@ description: TEDxBreckenridge 2026 - Ideas worth spreading in the heart of the R
 
         <div style="text-align: center; margin-top: 48px;">
             <p style="margin-bottom: 24px; font-size: 1.125rem; color: #333;">Explore 52 more talks from five years of TEDxBreckenridge events</p>
-            <a href="/talks" class="btn btn-primary">Watch All Talks</a>
+            <a href="/talks/" class="btn btn-primary">Watch All Talks</a>
         </div>
     </div>
 </section>
