Remove extra whitespace appearing intermittently at the bottom of the homepage on mobile.

--- a/website/index.html
+++ b/website/index.html
@@ -125,6 +125,7 @@ description: TEDxBreckenridge 2026 - Ideas worth spreading in the heart of the R
                 order: 1;
             }
             .save-date-image {
+                position: relative;
                 margin-right: 0;
                 margin-left: 0;
                 height: 400px;
