--- a/website/index.html
+++ b/website/index.html
@@ -151,6 +151,7 @@ description: TEDxBreckenridge 2026 - Ideas worth spreading in the heart of the R
                 font-size: 1.5rem !important;
             }
             .save-date-image {
+                position: relative;
                 height: 300px;
             }
         }
