Improve styles on the talks page.

--- a/website/pages/talks.html
+++ b/website/pages/talks.html
@@ -74,7 +74,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
   </div>
 
 <!-- 2025: METAMORPHOSIS -->
-<section class="section talks-year-section" id="metamorphosis" style="background: #fff; padding: 80px 24px; border-top: 3px solid var(--terracotta);">
+<section class="section talks-year-section" id="metamorphosis" style="background: #fff; padding: 120px 24px;">
     <div class="section-inner" style="max-width: 1200px; margin: 0 auto;">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
             <img src="{{ '/assets/images/2025_metamorphosis.webp' | relative_url }}" alt="TEDxBreckenridge 2025 Metamorphosis event logo - transformation and evolution theme" style="width: 100%; height: auto;">
@@ -101,7 +101,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 </section>
 
 <!-- 2023: INSTINCT -->
-<section class="section talks-year-section" id="instinct" style="background: var(--cream); padding: 80px 24px; border-top: 3px solid var(--teal);">
+<section class="section talks-year-section" id="instinct" style="background: var(--sand); padding: 120px 24px;">
     <div class="section-inner" style="max-width: 1200px; margin: 0 auto;">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
             <img src="{{ '/assets/images/2023_instinct.webp' | relative_url }}" alt="TEDxBreckenridge 2023 Instinct event logo - intuition and inner wisdom theme" style="width: 100%; height: auto;">
@@ -129,7 +129,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 </section>
 
 <!-- 2022: INTEGRATE -->
-<section class="section talks-year-section" id="integrate" style="background: #fff; padding: 80px 24px; border-top: 3px solid var(--terracotta);">
+<section class="section talks-year-section" id="integrate" style="background: #fff; padding: 120px 24px;">
     <div class="section-inner" style="max-width: 1200px; margin: 0 auto;">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
             <img src="{{ '/assets/images/2022_integrate.webp' | relative_url }}" alt="TEDxBreckenridge 2022 Integrate event logo - connection and unity theme" style="width: 100%; height: auto;">
@@ -157,7 +157,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 </section>
 
 <!-- 2021: EXPAND -->
-<section class="section talks-year-section" id="expand" style="background: var(--cream); padding: 80px 24px; border-top: 3px solid var(--teal);">
+<section class="section talks-year-section" id="expand" style="background: var(--sand); padding: 120px 24px;">
     <div class="section-inner" style="max-width: 1200px; margin: 0 auto;">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
             <img src="{{ '/assets/images/2021_expand.webp' | relative_url }}" alt="TEDxBreckenridge 2021 Expand event logo - growth and possibilities theme" style="width: 100%; height: auto;">
@@ -184,7 +184,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 </section>
 
 <!-- 2020: CONNECTION -->
-<section class="section talks-year-section" id="connection" style="background: #fff; padding: 80px 24px; border-top: 3px solid var(--terracotta);">
+<section class="section talks-year-section" id="connection" style="background: #fff; padding: 120px 24px;">
     <div class="section-inner" style="max-width: 1200px; margin: 0 auto;">
         <div class="section-header" style="display: grid; grid-template-columns: 300px 1fr; gap: 48px; align-items: center; margin-bottom: 64px;">
             <img src="{{ '/assets/images/2020_connection.webp' | relative_url }}" alt="TEDxBreckenridge 2020 Connection event logo - community and relationships theme" style="width: 100%; height: auto;">
@@ -211,7 +211,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
 </section>
 
 <!-- CTA Section -->
-<section class="section" style="background: linear-gradient(135deg, rgba(197, 91, 77, 0.08) 0%, rgba(91, 142, 142, 0.08) 100%); padding: 100px 24px; border-top: 4px solid var(--charcoal); margin-top: 0;">
+<section class="section" style="background: linear-gradient(135deg, rgba(197, 91, 77, 0.08) 0%, rgba(91, 142, 142, 0.08) 100%); padding: 100px 24px;">
     <div style="max-width: 600px; margin: 0 auto; text-align: center;">
         <div style="font-size: 0.875rem; font-weight: 600; text-transform: uppercase; letter-spacing: 0.1em; color: var(--terracotta); margin-bottom: 16px;">Join Us</div>
         <h2 style="font-size: 2.25rem; margin-bottom: 24px; color: var(--charcoal); font-weight: 700;">Want to share your ideas?</h2>
