Standardize according to CLAUDE.md.

--- a/website/index.html
+++ b/website/index.html
@@ -30,26 +30,26 @@ description: TEDxBreckenridge 2026 - Ideas worth spreading in the heart of the R
         </div>
     </div>
     <div class="hero-visual">
-        <img src="{{ '/assets/images/salon-elevated-cuisine.jpg' | relative_url }}" alt="Elevated Cuisine: The Science and Art of Cooking at Altitude - TEDxBreckenridge Salon January 15, 2026" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
+        <img src="{{ '/assets/images/heroes/salon-elevated-cuisine.jpg' | relative_url }}" alt="Elevated Cuisine: The Science and Art of Cooking at Altitude - TEDxBreckenridge Salon January 15, 2026" style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
     </div>
 </section>
 
 <!-- Photo Banner -->
 <div class="photo-banner">
     <div class="photo-banner-item">
-        <img src="{{ '/assets/images/photo-banner-1-event.jpg' | relative_url }}" alt="TEDxBreckenridge attendees enjoying ideas worth spreading at the Riverwalk Center in Breckenridge, Colorado">
+        <img src="{{ '/assets/images/events/photo-banner-1-event.jpg' | relative_url }}" alt="TEDxBreckenridge attendees enjoying ideas worth spreading at the Riverwalk Center in Breckenridge, Colorado" loading="lazy">
     </div>
     <div class="photo-banner-item">
-        <img src="{{ '/assets/images/photo-banner-2-audience.jpg' | relative_url }}" alt="Engaged audience members listening to inspiring talks at TEDxBreckenridge">
+        <img src="{{ '/assets/images/events/photo-banner-2-audience.jpg' | relative_url }}" alt="Engaged audience members listening to inspiring talks at TEDxBreckenridge" loading="lazy">
     </div>
     <div class="photo-banner-item">
-        <img src="{{ '/assets/images/photo-banner-3-speaker.jpg' | relative_url }}" alt="Speaker sharing ideas on the red TEDxBreckenridge stage">
+        <img src="{{ '/assets/images/events/photo-banner-3-speaker.jpg' | relative_url }}" alt="Speaker sharing ideas on the red TEDxBreckenridge stage" loading="lazy">
     </div>
     <div class="photo-banner-item">
-        <img src="{{ '/assets/images/photo-banner-4-stage.jpg' | relative_url }}" alt="TEDxBreckenridge stage with iconic red circle and mountain backdrop">
+        <img src="{{ '/assets/images/events/photo-banner-4-stage.jpg' | relative_url }}" alt="TEDxBreckenridge stage with iconic red circle and mountain backdrop" loading="lazy">
     </div>
     <div class="photo-banner-item">
-        <img src="{{ '/assets/images/photo-banner-5-community.jpg' | relative_url }}" alt="TEDxBreckenridge community connecting and networking in Breckenridge">
+        <img src="{{ '/assets/images/events/photo-banner-5-community.jpg' | relative_url }}" alt="TEDxBreckenridge community connecting and networking in Breckenridge" loading="lazy">
     </div>
 </div>
 
@@ -58,7 +58,7 @@ description: TEDxBreckenridge 2026 - Ideas worth spreading in the heart of the R
     <div class="section-inner">
         <div class="theme-content theme-content-reverse">
             <div class="theme-visual">
-                <img src="{{ '/assets/images/salon-cutting-board.jpg' | relative_url }}" alt="Fresh ingredients on a cutting board prepared for high-altitude cooking demonstration">
+                <img src="{{ '/assets/images/heroes/salon-cutting-board.jpg' | relative_url }}" alt="Fresh ingredients on a cutting board prepared for high-altitude cooking demonstration" loading="lazy">
             </div>
             <div class="theme-text">
                 <div class="section-header">
@@ -81,81 +81,7 @@ description: TEDxBreckenridge 2026 - Ideas worth spreading in the heart of the R
 </section>
 
 <!-- Save the Date Section -->
-<section class="section section-full" id="main-event" style="background: #fafafa; overflow: hidden; padding: 0;">
-    <style>
-        .save-date-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            max-width: 1400px;
-            margin: 0 auto;
-            min-height: 700px;
-        }
-        .save-date-content {
-            padding: 80px 80px 80px 24px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-        .save-date-image {
-            position: relative;
-            margin-right: -100px;
-            align-self: stretch;
-        }
-        .save-date-image img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            object-position: center;
-        }
-        @media (max-width: 1024px) {
-            #main-event {
-                padding: 0 !important;
-            }
-            .save-date-container {
-                display: flex;
-                flex-direction: column;
-                min-height: auto;
-                max-width: 100%;
-            }
-            .save-date-content {
-                padding: 48px 16px;
-                order: 1;
-            }
-            .save-date-image {
-                position: relative;
-                margin-right: 0;
-                margin-left: 0;
-                height: 400px;
-                order: 2;
-                width: 100%;
-            }
-            .save-date-image img {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-            }
-        }
-        @media (max-width: 640px) {
-            .save-date-content {
-                padding: 40px 12px;
-            }
-            .save-date-content h2 {
-                font-size: 2rem !important;
-            }
-            .save-date-content .date-large {
-                font-size: 1.5rem !important;
-            }
-            .save-date-image {
-                position: relative;
-                height: 300px;
-            }
-        }
-    </style>
+<section class="section section-full" id="main-event">
     <div class="save-date-container">
         <div class="save-date-content">
             <div class="section-eyebrow">Save the Date</div>
@@ -181,7 +107,7 @@ description: TEDxBreckenridge 2026 - Ideas worth spreading in the heart of the R
         </div>
 
         <div class="save-date-image">
-            <img src="{{ '/assets/images/save-the-date-event-photo.jpg' | relative_url }}" alt="TEDxBreckenridge 2026 main event at the Riverwalk Center - Save the date for October 3, 2026">
+            <img src="{{ '/assets/images/events/save-the-date-event-photo.jpg' | relative_url }}" alt="TEDxBreckenridge 2026 main event at the Riverwalk Center - Save the date for October 3, 2026" loading="lazy">
         </div>
     </div>
 </section>
@@ -198,7 +124,7 @@ description: TEDxBreckenridge 2026 - Ideas worth spreading in the heart of the R
         <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 32px; margin-bottom: 48px;">
             <div>
                 <div style="aspect-ratio: 16/9; margin-bottom: 16px;">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/rAE9PDAvv8Y" title="Why restaurants are essential for human connection - Patrick Murphy TEDxBreckenridge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border-radius: 8px;"></iframe>
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/rAE9PDAvv8Y" title="Why restaurants are essential for human connection - Patrick Murphy TEDxBreckenridge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy" style="border-radius: 8px;"></iframe>
                 </div>
                 <h3 style="font-size: 1.125rem; margin: 0 0 8px 0; line-height: 1.4;">Why restaurants are essential for human connection</h3>
                 <p style="margin: 0; color: #666;">Patrick Murphy</p>
@@ -206,7 +132,7 @@ description: TEDxBreckenridge 2026 - Ideas worth spreading in the heart of the R
 
             <div>
                 <div style="aspect-ratio: 16/9; margin-bottom: 16px;">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/iIWd6FbQqtM" title="How asking for help saved me and can change mental health culture - Drew Petersen TEDxBreckenridge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border-radius: 8px;"></iframe>
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/iIWd6FbQqtM" title="How asking for help saved me and can change mental health culture - Drew Petersen TEDxBreckenridge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy" style="border-radius: 8px;"></iframe>
                 </div>
                 <h3 style="font-size: 1.125rem; margin: 0 0 8px 0; line-height: 1.4;">How asking for help saved me & can change mental health culture</h3>
                 <p style="margin: 0; color: #666;">Drew Petersen</p>
@@ -214,7 +140,7 @@ description: TEDxBreckenridge 2026 - Ideas worth spreading in the heart of the R
 
             <div>
                 <div style="aspect-ratio: 16/9; margin-bottom: 16px;">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/cWqgfqj0rNM" title="Beyond the slopes: diversifying a mountain economy - Thayer Hirsh TEDxBreckenridge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="border-radius: 8px;"></iframe>
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/cWqgfqj0rNM" title="Beyond the slopes: diversifying a mountain economy - Thayer Hirsh TEDxBreckenridge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy" style="border-radius: 8px;"></iframe>
                 </div>
                 <h3 style="font-size: 1.125rem; margin: 0 0 8px 0; line-height: 1.4;">Beyond the slopes: diversifying a mountain economy</h3>
                 <p style="margin: 0; color: #666;">Thayer Hirsh</p>
