--- a/website/pages/talks.html
+++ b/website/pages/talks.html
@@ -497,15 +497,21 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
             return;
         }
 
+        // Get talk title for iframe title attribute
+        const talkTitle = wrapper.closest('div').querySelector('.video-title')?.textContent || 'TEDxBreckenridge talk';
+        const speakerName = wrapper.closest('div').querySelector('.video-speaker')?.textContent || '';
+        const iframeTitle = speakerName ? `${talkTitle} - ${speakerName}` : talkTitle;
+
         // Create iframe
         const iframe = document.createElement('iframe');
         iframe.setAttribute('width', '100%');
         iframe.setAttribute('height', '100%');
         iframe.setAttribute('src', `https://www.youtube.com/embed/${videoId}`);
+        iframe.setAttribute('title', iframeTitle);
         iframe.setAttribute('frameborder', '0');
         iframe.setAttribute('allow', 'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture');
         iframe.setAttribute('allowfullscreen', '');
-        iframe.setAttribute('loading', 'lazy');
+        iframe.setAttribute('loading', '');
         iframe.style.borderRadius = '8px';
 
         // Add iframe to wrapper
