--- a/website/pages/talks.html
+++ b/website/pages/talks.html
@@ -470,7 +470,7 @@ description: Watch inspiring TEDx talks from Breckenridge speakers. Explore idea
         <p style="font-size: 1.125rem; line-height: 1.6; margin-bottom: 40px; color: var(--stone);">Applications for TEDxBreckenridge 2026 speakers are now open. We're looking for compelling stories and insights from our community.</p>
         <div style="display: flex; gap: 16px; justify-content: center; flex-wrap: wrap;">
             <a href="https://tedxbreckenridge.com/speak" target="_blank" rel="noopener noreferrer" class="btn btn-primary" aria-label="Apply to Speak (opens in new window)">Apply to Speak</a>
-            <a href="/#newsletter" class="btn btn-secondary">Get Event Updates</a>
+            <a href="/#mailing-list" class="btn btn-secondary">Get Event Updates</a>
         </div>
     </div>
 </section>
