Add a separate Salon events page.

--- a/website/index.html
+++ b/website/index.html
@@ -65,15 +65,16 @@ description: TEDxBreckenridge 2026 - Ideas worth spreading in the heart of the R
                     <div class="section-eyebrow">Next Event</div>
                     <h2 class="section-title">Elevated Cuisine:<br>The Science and Art of Cooking at Altitude</h2>
                 </div>
-                <p>Why does water boil at a lower temperature in the mountains? Why do cakes rise too fast—or not at all? And how do professional chefs adapt their techniques when cooking at 9,000 feet?</p>
-                <p>In this TEDxBreckenridge Salon, the culinary team from Colorado Mountain College explores how altitude changes the rules of cooking and baking—and what it takes to master flavor, texture, and technique in the High Rockies. Through a short talk, practical insights, and guided discussion, we'll dive into the science behind high-elevation kitchens and the creative adaptations that make great food possible up here.</p>
-                <p>Salon events are intentionally small and conversational, designed to spark curiosity, encourage discussion, and build connections among people who love learning. Come ready to think, ask questions, and leave with ideas you'll actually use in your own kitchen.</p>
-                <div style="margin-top: 24px;">
-                    <p><strong>January 15, 2026 • 6:00 PM</strong><br>
-                    EVO3 Workspace<br>
-                    620 E Main St #6, Frisco, CO 80443</p>
-                    <p style="margin-top: 16px;"><strong>Suggested donation:</strong> $10<br>
-                    <em>Ideas should be accessible to everyone. If cost is a barrier, join us anyway — your curiosity matters most.</em></p>
+                <p>Why does water boil at a lower temperature in the mountains? How do professional chefs adapt their techniques when cooking at 9,000 feet? Join the culinary team from Colorado Mountain College as they explore the science and art of high-altitude cooking.</p>
+                <p>Salon events are small, conversational gatherings designed to spark curiosity and build connections among people who love learning.</p>
+                <div style="margin-top: 32px; padding: 24px; background: #fafafa; border-radius: 8px;">
+                    <p style="margin: 0;"><strong>January 15, 2026 • 6:00 PM</strong><br>
+                    EVO3 Workspace, Frisco<br>
+                    <strong>Suggested donation:</strong> $10</p>
+                </div>
+                <div style="margin-top: 24px; display: flex; gap: 16px; flex-wrap: wrap;">
+                    <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude" class="btn btn-primary">Get Tickets</a>
+                    <a href="/salon/" class="btn btn-secondary">Learn More</a>
                 </div>
             </div>
         </div>
