Replace second salon section of homepage with a donate section.

--- a/website/index.html
+++ b/website/index.html
@@ -26,7 +26,7 @@ description: TEDxBreckenridge 2026 - Ideas worth spreading in the heart of the R
         </div>
         <div class="hero-actions">
             <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude" class="btn btn-primary">Get Tickets</a>
-            <a href="#salon" class="btn btn-secondary">Learn More</a>
+            <a href="/salon/" class="btn btn-secondary">Learn More</a>
         </div>
     </div>
     <div class="hero-visual">
@@ -53,28 +53,31 @@ description: TEDxBreckenridge 2026 - Ideas worth spreading in the heart of the R
     </div>
 </div>
 
-<!-- Salon Section -->
-<section class="section section-full theme-section" id="salon">
+<!-- Donate Section -->
+<section class="section section-full theme-section" id="donate" style="background: #fff;">
     <div class="section-inner">
         <div class="theme-content theme-content-reverse">
             <div class="theme-visual">
-                <img src="{{ '/assets/images/heroes/salon-cutting-board.jpg' | relative_url }}" alt="Fresh ingredients on a cutting board prepared for high-altitude cooking demonstration" loading="lazy">
+                <img src="{{ '/assets/images/events/donate-section-speaker.jpg' | relative_url }}" alt="Speaker presenting on stage at TEDxBreckenridge event" loading="lazy">
             </div>
             <div class="theme-text">
                 <div class="section-header">
-                    <div class="section-eyebrow">Next Event</div>
-                    <h2 class="section-title">Elevated Cuisine:<br>The Science and Art of Cooking at Altitude</h2>
+                    <div class="section-eyebrow">Support Our Mission</div>
+                    <h2 class="section-title">Help Bring Ideas Worth Spreading to Summit County</h2>
                 </div>
-                <p>Why does water boil at a lower temperature in the mountains? How do professional chefs adapt their techniques when cooking at 9,000 feet? Join the culinary team from Colorado Mountain College as they explore the science and art of high-altitude cooking.</p>
-                <p>Salon events are small, conversational gatherings designed to spark curiosity and build connections among people who love learning.</p>
-                <div style="margin-top: 32px; padding: 24px; background: #fafafa; border-radius: 8px;">
-                    <p style="margin: 0;"><strong>January 15, 2026 • 6:00 PM</strong><br>
-                    EVO3 Workspace, Frisco<br>
-                    <strong>Suggested donation:</strong> $10</p>
+                <p>TEDxBreckenridge is a 501(c)(3) nonprofit organization run entirely by local volunteers. Every dollar you contribute goes directly toward making our events possible—from securing speakers and venues to producing high-quality content that reaches thousands of people in our community and beyond.</p>
+                <p>Your donation helps ensure that transformative ideas remain accessible to everyone, regardless of their ability to pay. Together, we're building a platform for innovation, creativity, and meaningful conversation in the heart of the Rockies.</p>
+                <div style="margin-top: 32px;">
+                    <p style="margin: 0 0 8px 0; font-weight: 600; color: #333;">Why Your Support Matters:</p>
+                    <ul style="margin: 0; padding-left: 20px; color: #666; line-height: 1.8;">
+                        <li>Fund speaker preparation and event production</li>
+                        <li>Keep ticket prices accessible to all community members</li>
+                        <li>Support year-round programming including Salon events</li>
+                        <li>Invest in video production and content distribution</li>
+                    </ul>
                 </div>
-                <div style="margin-top: 24px; display: flex; gap: 16px; flex-wrap: wrap;">
-                    <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude" class="btn btn-primary">Get Tickets</a>
-                    <a href="/salon/" class="btn btn-secondary">Learn More</a>
+                <div style="margin-top: 32px;">
+                    <a href="https://givebutter.com/tedxbreckenridge" target="_blank" rel="noopener noreferrer" class="btn btn-primary" aria-label="Make a donation (opens in new window)">Make a Donation</a>
                 </div>
             </div>
         </div>
