Improve the salon page.

--- a/website/salon.html
+++ b/website/salon.html
@@ -4,28 +4,25 @@ title: TEDxBreckenridge Salon
 description: TEDxBreckenridge Salon events are small, conversational gatherings designed to spark curiosity and build connections. Join us for the next Salon on January 15, 2026 featuring Elevated Cuisine - The Science and Art of Cooking at Altitude.
 ---
 
-<!-- Page Header -->
+<!-- What is a Salon -->
 <section class="page-header" style="padding-top: 160px;">
-  <div class="page-header-content">
-    <h1>Salon Events</h1>
-    <p>Small gatherings, big ideas</p>
-  </div>
+    <div class="page-header-content">
+        <div class="section-eyebrow">TEDxBreckenridge Salon</div>
+        <h1>Small Gatherings, Big Ideas</h1>
+    </div>
 </section>
 
-<!-- Intro Text -->
-<section class="section salon-intro" style="padding: 40px 24px; background: #fff;">
-  <div style="max-width: 800px; margin: 0 auto;">
-    <p style="font-size: 1.125rem; line-height: 1.8; text-align: center; margin: 0;">Salon events are intentionally small and conversational, designed to spark curiosity, encourage discussion, and build connections among people who love learning.</p>
-  </div>
-</section>
+<section class="section section-full" style="background: #fff; padding-top: 40px;">
+    <div class="section-inner" style="max-width: 800px; margin: 0 auto;">
+        <div style="font-size: 1.125rem; line-height: 1.8; color: #333;">
+            <p style="margin-bottom: 32px;">TEDxBreckenridge Salon events are intimate, conversational gatherings that bring together curious minds to explore fascinating topics. Unlike our main annual event, Salons are smaller by design—creating space for deeper discussion, questions, and genuine connection.</p>
 
-<style>
-  @media (min-width: 768px) {
-    .salon-intro {
-      padding: 64px 24px !important;
-    }
-  }
-</style>
+            <p style="margin-bottom: 32px;">Each Salon features a short talk or presentation from a local expert, followed by guided conversation where everyone's voice matters. It's learning that feels less like a lecture and more like sitting around a table with friends who love to explore ideas together.</p>
+
+            <p style="margin-bottom: 0;">Topics vary throughout the year—from science and technology to art, culture, and community challenges. What stays constant is the spirit: curiosity-driven, accessible to all, and designed to leave you thinking differently about the world around you.</p>
+        </div>
+    </div>
+</section>
 
 <!-- Upcoming Salon -->
 <section class="section section-full theme-section" id="upcoming-salon">
@@ -53,24 +50,6 @@ description: TEDxBreckenridge Salon events are small, conversational gatherings 
                     <a href="https://tedxbreckenridge.ticketsauce.com/e/cooking-at-altitude" class="btn btn-primary">Get Tickets</a>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
-
-<!-- What is a Salon -->
-<section class="section section-full" style="background: #fff;">
-    <div class="section-inner" style="max-width: 800px; margin: 0 auto;">
-        <div class="section-header" style="text-align: center; margin-bottom: 48px;">
-            <div class="section-eyebrow">About Salons</div>
-            <h2 class="section-title">What is a TEDxBreckenridge Salon?</h2>
-        </div>
-
-        <div style="font-size: 1.125rem; line-height: 1.8; color: #333;">
-            <p>TEDxBreckenridge Salon events are intimate, conversational gatherings that bring together curious minds to explore fascinating topics. Unlike our main annual event, Salons are smaller by design—creating space for deeper discussion, questions, and genuine connection.</p>
-
-            <p>Each Salon features a short talk or presentation from a local expert, followed by guided conversation where everyone's voice matters. It's learning that feels less like a lecture and more like sitting around a table with friends who love to explore ideas together.</p>
-
-            <p>Topics vary throughout the year—from science and technology to art, culture, and community challenges. What stays constant is the spirit: curiosity-driven, accessible to all, and designed to leave you thinking differently about the world around you.</p>
         </div>
     </div>
 </section>
