Fix gutters on Featured Talks videos.

--- a/website/index.html
+++ b/website/index.html
@@ -125,7 +125,7 @@ description: TEDxBreckenridge 2026 - Ideas worth spreading in the heart of the R
             <p style="max-width: 600px; margin: 24px auto 0; font-size: 1.125rem; line-height: 1.6; color: #666;">Watch compelling talks from local voices, innovators, and community leaders who've graced the TEDxBreckenridge stage.</p>
         </div>
 
-        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 32px; margin-bottom: 48px;">
+        <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(min(100%, 320px), 1fr)); gap: 32px; margin-bottom: 48px;">
             <div>
                 <div style="aspect-ratio: 16/9; margin-bottom: 16px;">
                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/rAE9PDAvv8Y" title="Why restaurants are essential for human connection - Patrick Murphy TEDxBreckenridge" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen loading="lazy" style="border-radius: 8px;"></iframe>
