--- a/website/index.html
+++ b/website/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Home
-description: TEDxBreckenridge 2026 - Ideas worth spreading in the heart of the Rockies. Join us October 3, 2026 for inspiring talks, local voices, and meaningful connections in Breckenridge, Colorado.
+title: TEDxBreckenridge - Ideas Worth Spreading in Breckenridge, Colorado
+description: Join us for inspiring talks and meaningful connections in Summit County. TEDxBreckenridge brings local voices and transformative ideas to the mountains. October 3, 2026.
 ---
 
 <!-- Hero Section -->
